--- a/packages/graphql-migrations/tsconfig.json
+++ b/packages/graphql-migrations/tsconfig.json
@@ -1,33 +1,18 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "lib": [
-      "dom",
-      "esnext",
-    ],
-    "noUnusedLocals": true,
-    "skipLibCheck": true,
-    // Strict
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    // May break autocomplete
-    "strictNullChecks": false,
-  },
-  "exclude": [
-    "node_modules"
-  ],
+  "extends": "../../tsconfig.json",
   "include": [
-    "src/**/*.ts",
-    "tests/**/*.ts"
-  ]
+    "./src/**/*.ts"
+  ],
+  "compilerOptions": {
+    "outDir": "./dist/",
+    "declarationDir": "./types",
+    "resolveJsonModule": true,
+    "lib": [
+      "esnext.asynciterable",
+      "es2015",
+      "es2018.promise",
+      "dom",
+      "es2016"
+    ]
+  }
 }
