chore: tidy up package.json
- remove/rename scripts
- remove unused dependencies

--- a/packages/graphql-migrations/package.json
+++ b/packages/graphql-migrations/package.json
@@ -3,6 +3,10 @@
   "version": "0.10.0-rc2",
   "description": "Create & migrate Databases from GraphQL Schema",
   "author": "Enda Phelan <ephelan@redhat.com>",
+  "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "typescript": {
@@ -12,35 +16,23 @@
     "clean": "rimraf coverage dist types",
     "build": "tsc",
     "watch": "tsc -w",
-    "test:types": "tsc --noEmit",
-    "test:unit": "jest",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
     "test": "yarn run tslint && yarn run eslint && yarn run test:types && yarn run test:unit",
-    "prepublishOnly": "yarn run test && yarn run build"
+    "pretest": "npm run build"
   },
   "dependencies": {
-    "case": "^1.6.1",
+    "case": "1.6.1",
     "graphql-annotations": "^0.0.3",
     "knex": "0.20.2",
     "lodash": "4.17.15",
     "lodash-es": "4.17.15"
   },
   "devDependencies": {
-    "@nodepack/plugin-typescript": "^0.1.14",
-    "@nodepack/service": "^0.1.14",
     "@types/graphql": "14.2.3",
     "@types/jest": "^24.0.11",
     "@types/node": "12.12.12",
     "@types/lodash": "4.14.108",
-    "@typescript-eslint/eslint-plugin": "^1.1.1",
-    "@typescript-eslint/parser": "^1.1.1",
     "ava": "2.4.0",
-    "eslint": "^5.12.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.4",
     "jest": "^24.0.0",
@@ -50,16 +42,11 @@
     "ts-node": "8.5.2",
     "tslint": "5.20.1",
     "tsutils": "3.17.1",
-    "typescript": "3.7.2",
-    "vuepress": "^0.14.10"
+    "typescript": "3.7.2"
   },
   "peerDependencies": {
     "graphql": "^0.12.0 || ^0.13.0 || ^14.0.0"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
   "engines": {
     "node": ">=10.15.3"
   },
